cabal-version:      2.4
name:               callcom
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Morgan Thomas 
maintainer:    morgan.a.s.thomas@gmail.com

library
  exposed-modules:
    CallCom.Auth
    CallCom.Commodity
    CallCom.CommodityType
    CallCom.Ledger
    CallCom.TokenIssue
    CallCom.Types.Auth
    CallCom.Types.Commodity
    CallCom.Types.CommodityType
    CallCom.Types.ErrorMessage
    CallCom.Types.HasLedgerStore
    CallCom.Types.Ledger
    CallCom.Types.Positions
    CallCom.Types.TokenBalance
    CallCom.Types.TokenIssue
    CallCom.Types.Transaction
    CallCom.Types.User
    CallCom.User

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    basement,
    bytestring,
    containers,
    cryptohash-sha256,
    either,
    ed25519,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    text,
    mtl,
    numeric-prelude,
    optparse-applicative,
    parsec,
    process,
    QuickCheck,
    random,
    safe,
    serialise,
    sort,
    sydtest,
    sydtest-discover,
    template-haskell,
    text -any,
    time,
    transformers,
    validation,
    validity

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:

  build-tools:
    sydtest-discover

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    mtl,
    numeric-prelude,
    optparse-applicative,
    parsec,
    process,
    QuickCheck,
    random,
    raw-strings-qq,
    sydtest,
    text -any,
    time,
    transformers,
    validity,

    callcom

  hs-source-dirs: test

  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


executable callcom
  main-is:
    Main.hs

  build-depends:
    callcom

  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists

